# sistema-banco

./: .gitignore  CMakeLists.txt  CMakePresets.json  teste.cpp
include/: chave_pix.h  cliente.h  transferencia.h
src/: cliente.cpp  main  main.cpp
